src/index.scss
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}




// character attributes bar

#character-sheet-header {
    display: flex;
    height: 100px;
    margin: 35px;
    border-radius: 25px;
    border: 2px solid black;
}

#character-name {
    display: inline-flex;
    justify-content: center;
    flex-grow: 1;
    border: 1px solid red;
    text-align: center;
}

.character-details {
    display: inline-flex;
    justify-content: space-evenly;
    flex-grow: 3;
    border: 1px solid red;
}

#character-details-section-1 {
    display: block;
    width: 50%;
}

// Class Dropdown

// Race Dropdown

// Background Dropdown

// Status Options

#character-details-section-2 {
    display: block;
    width: 50%;
}

#nav-links {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    justify-content: space-evenly;
    text-align: center;
    flex-grow: 1;
    border: 1px solid red;
}

#class {
    width: 100%;
    height: 50%;
    display: block;
    border: 1px solid red;
}

#background {
    width: 100%;
    height: 50%;
    display: block;
    border: 1px solid red;
}

#race {
    width: 100%;
    height: 50%;
    display: block;
    border: 1px solid red;
}

#ailment {
    width: 100%;
    height: 50%;
    display: block;
    border: 1px solid red;
}

// Character stats

#character-sheet-stats {
    margin: 35px;
    border-radius: 25px;
    border: 2px solid black;
    flex-grow: 3;
    display: grid;
    grid-auto-rows: 1fr;
}

// Stats and Modifiers

.stat {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-left: auto;
    margin-right: auto;
    border: 1px solid red;
}

#str {
    width: 30px;
    height: 30px;
}

#dex {
    width: 30px;
    height: 30px;
}

#con {
    width: 30px;
    height: 30px;
}

#int {
    width: 30px;
    height: 30px;
}

#wis {
    width: 30px;
    height: 30px;
}

#cha {
    width: 30px;
    height: 30px;
}

.mod {
    // need to determine height of largest skill block 
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 80%;
}

#character-sheet-body {
    display: flex;
    border: solid 1px black;
}

.character-sheet-survival-stats {
    display: flex;
    border: 1px solid red;
    flex-direction: column;
    margin: 35px;
    border-radius: 25px;
    border: 2px solid black;
    flex-grow: 3;
    justify-content: center;
    align-items: center;
}

.character-health-armor {
    display: grid;
    grid-template-columns: auto auto;
    width: 100%;
    border: 1px solid red;
    gap: 10px;
    place-items: center;
    padding-top: 10px;
}


#hp {
    height: 50px;
}

#temp-hp {
    height: 50px;
}

#ac {
    height: 50px;
}

#hit-dice {
    height: 65px;
    width: 100px;
}



.character-misc-stats {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    justify-content: space-evenly;
    border: 1px solid red;
    width: 100%;
}

.character-items {
    display: flex;
    justify-content: space-evenly;
    flex-grow: 1;
    border: 1px solid red;
    width: 100%;
}

#character-equipment {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    justify-content: space-evenly;
    border: 2px solid black;
    border-radius: 25px;
    flex-grow: 1;

}

#equipment-input {
    display: flex;
    justify-content: center;
}

#equipment-list {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#character-inventory {
    display: flex;
    flex-direction: column;
    justify-content: center;
    justify-content: space-evenly;
    align-items: center;
    border: 2px solid black;
    border-radius: 25px;
    flex-grow: 1;
}



.character-sheet-model-and-attacks {
    display: flex;
    border: 1px solid red;
    flex-direction: column;
    margin: 35px;
    border-radius: 25px;
    border: 2px solid black;
    flex-grow: 4;
    justify-content: center;
    align-items: center;
    justify-content: space-evenly;

}


#character-canvas {
    display: flex;
    flex-grow: 5.5;
    width: 100%;
}

#character-attacks-and-spells {
    flex-grow: 4.5;    
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    justify-content: space-evenly;
    border: 1px solid black;
    border-radius: 25px;
}



#attack-list {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    justify-content: space-evenly;
}


// Strength

// character str block

#character-attributes-section-str {
    display: flex;
    flex-grow: 1;
}


// Strength Skills and Saving Throws

#character-strength {
    display: inline-block;
    flex-grow: 2;
    border: 1px solid red;

}


#strength-skills {
    display: inline-flex;
    flex-direction: column;
    justify-content: space-evenly;
    flex-grow: 3;
    border: 1px solid red;
    padding-left: 10px;
    padding-top: 10px;
}

#strength-skills label {
    display: inline-block;
    width: 150px;
}

#athletics-label:hover {
    
}

// Dexterity

#character-attributes-section-dex {
    display: flex;
    flex-grow: 1;
}

// Dexterity Skills and Saving Throws


#character-dexterity {
    display: inline-block;
    flex-grow: 2;
    border: 1px solid red;
}

#dexterity-skills {
    display: inline-flex;
    flex-direction: column;
    justify-content: space-evenly;
    flex-grow: 3;
    border: 1px solid red;
    padding-left: 10px;
    padding-top: 10px;
}

#dexterity-skills label {
    display: inline-block;
    width: 150px;
}

// Constitution

#character-attributes-section-con {
    display: flex;
    flex-grow: 1;
}

// Constitution Skills and Saving Throws

#character-constitution {
    display: inline-block;
    flex-grow: 2;
    border: 1px solid red;
}

#constitution-skills {
    display: inline-flex;
    flex-direction: column;
    justify-content: space-evenly;
    flex-grow: 3;
    border: 1px solid red;
    padding-left: 10px;
    padding-top: 10px;
}

#constitution-skills label {
    display: inline-block;
    width: 150px;
}

// Intelligence

#character-attributes-section-int {
    display: flex;
    flex-grow: 1;
}

// Intelligence Skills and Saving Throws

#character-intelligence {
    display: inline-block;
    flex-grow: 2;
    border: 1px solid red;
}

#intelligence-skills {
    display: inline-flex;
    flex-direction: column;
    justify-content: space-evenly;
    flex-grow: 3;
    border: 1px solid red;
    padding-left: 10px;
    padding-top: 10px;
}

#intelligence-skills label {
    display: inline-block;
    width: 150px;
}

// Wisdom

#character-attributes-section-wis {
    display: flex;
    flex-grow: 1;
}

// Wisdom Skills and Saving Throws

#character-wisdom {
    display: inline-block;
    flex-grow: 2;
    border: 1px solid red;
}

#wisdom-skills {
    display: inline-flex;
    flex-direction: column;
    justify-content: space-evenly;
    flex-grow: 3;
    border: 1px solid red;
    padding-left: 10px;
    padding-top: 10px;
}

#wisdom-skills label {
    display: inline-block;
    width: 150px;
}

// Charisma

#character-attributes-section-cha {
    display: flex;
    flex-grow: 1;
}

// Charisma Skills and Saving Throws

#character-charisma {
    display: inline-block;
    flex-grow: 2;
    border: 1px solid red;
}

#charisma-skills {
    display: inline-flex;
    flex-direction: column;
    justify-content: space-evenly;
    flex-grow: 3;
    border: 1px solid red;
    padding-left: 10px;
    padding-top: 10px;
}

#charisma-skills label {
    display: inline-block;
    width: 150px;
}

